// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compliance Resolver Correctly Resolves Compliance List Query 1`] = `
Object {
  "data": Object {
    "compliances": Array [],
  },
}
`;

exports[`Compliance Resolver Correctly Resolves Create Compliance Mutation 1`] = `
Object {
  "data": Object {
    "createCompliance": Array [
      "404 page not found
",
    ],
  },
}
`;

exports[`Compliance Resolver Correctly Resolves Single Compliance Query 1`] = `
Object {
  "data": Object {
    "compliances": Array [],
  },
}
`;
